--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "pg": "^8.8.0"
+    "grunt": "^1.5.3",
+    "gulp": "^4.0.2",
+    "pg": "^8.8.0",
+    "react": "^18.2.0",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
